--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "proxy":"http://127.0.0.1:8000/api/",
+  "proxy": "http://127.0.0.1:8000/api/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
+    "react-image-gallery": "^1.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
